[gd_scene load_steps=23 format=3 uid="uid://8nnhaiuf5taq"]

[ext_resource type="Script" uid="uid://byj167uh3nsu5" path="res://scripts/game.gd" id="1_7r4gi"]
[ext_resource type="Texture2D" uid="uid://b1etgd0ybmxp4" path="res://sky.png" id="1_qfnet"]
[ext_resource type="PackedScene" uid="uid://ca2mjl3kgpx36" path="res://scenes/player.tscn" id="2_i7141"]
[ext_resource type="Texture2D" uid="uid://cb2w8p48ib443" path="res://assets/non-animations/background.png" id="3_w7kh3"]
[ext_resource type="Texture2D" uid="uid://cllc6xge6vj3a" path="res://hook.png" id="4_7r4gi"]
[ext_resource type="Script" uid="uid://bsa8r2vc8cqlj" path="res://scripts/camera_2d.gd" id="4_7t5mc"]
[ext_resource type="Texture2D" uid="uid://dgndupctbky6f" path="res://assets/non-animations/platform.png" id="7_e3hyu"]
[ext_resource type="PackedScene" uid="uid://k2h4f3dx462v" path="res://scenes/start.tscn" id="8_4mrxx"]
[ext_resource type="PackedScene" uid="uid://cu2qmhl5lasj1" path="res://scenes/paused.tscn" id="9_7r4gi"]
[ext_resource type="Texture2D" uid="uid://d0ydkdscbtc8e" path="res://assets/non-animations/cannopy.png" id="11_e3hyu"]
[ext_resource type="PackedScene" uid="uid://dtk6c78uq0dnw" path="res://scenes/end.tscn" id="11_q5onr"]
[ext_resource type="PackedScene" uid="uid://qtjp0d56wc6p" path="res://scenes/ui.tscn" id="12_q5onr"]
[ext_resource type="Script" uid="uid://7ur74s2qji2d" path="res://scripts/state_machine.gd" id="13_o8fc1"]
[ext_resource type="Script" uid="uid://c462r4w3iu42t" path="res://scripts/game_states/start_screen.gd" id="14_o8fc1"]
[ext_resource type="Script" uid="uid://cqhf7o3e5vw58" path="res://scripts/game_states/paused.gd" id="15_xo05s"]
[ext_resource type="Script" uid="uid://du8blcotjl33q" path="res://scripts/game_states/playing.gd" id="16_dss4m"]
[ext_resource type="Script" uid="uid://nyo8kxgkxdi7" path="res://scripts/game_states/end_game.gd" id="17_7t5mc"]
[ext_resource type="AudioStream" uid="uid://6eyeb251ge6p" path="res://assets/music/konk-song.wav" id="18_lakw3"]
[ext_resource type="Script" uid="uid://d167j76r6ii4s" path="res://scenes/song_looper.gd" id="19_pm21f"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bolhf"]
rough = true
bounce = 0.17

[sub_resource type="CircleShape2D" id="CircleShape2D_ceco4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3hyu"]
size = Vector2(1620, 826)

[node name="main" type="Node2D"]
script = ExtResource("1_7r4gi")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 533.0
offset_bottom = 304.0
scale = Vector2(2.16, 2.16)
texture = ExtResource("1_qfnet")
stretch_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(576, 327)
texture = ExtResource("3_w7kh3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 327)
script = ExtResource("4_7t5mc")

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]
current = true

[node name="Player2PinJoint" type="PinJoint2D" parent="."]
position = Vector2(234, 74)
node_a = NodePath("../Player2")
bias = 0.05
disable_collision = false
softness = 16.0
motor_target_velocity = 1.39626

[node name="Player1PinJoint" type="PinJoint2D" parent="."]
position = Vector2(117, 37)
node_a = NodePath("../Player1")
bias = 0.05
disable_collision = false
softness = 16.0
motor_target_velocity = 1.39626

[node name="Player1" parent="." node_paths=PackedStringArray("hook", "pinjoint") groups=["Players"] instance=ExtResource("2_i7141")]
position = Vector2(101, 224)
physics_material_override = SubResource("PhysicsMaterial_bolhf")
gravity_scale = 2.0
lock_rotation = false
contact_monitor = true
max_contacts_reported = 3
hook = NodePath("../Player1HookPoint")
pinjoint = NodePath("../Player1PinJoint")
player_id = "1"
metadata/_edit_group_ = true

[node name="Player2" parent="." node_paths=PackedStringArray("hook", "pinjoint") groups=["Players"] instance=ExtResource("2_i7141")]
position = Vector2(907, 187)
physics_material_override = SubResource("PhysicsMaterial_bolhf")
gravity_scale = 2.0
lock_rotation = false
contact_monitor = true
max_contacts_reported = 3
hook = NodePath("../Player2HookPoint")
pinjoint = NodePath("../Player2PinJoint")
player_id = "2"
metadata/_edit_group_ = true

[node name="Player2HookPoint" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2HookPoint"]
shape = SubResource("CircleShape2D_ceco4")

[node name="Sprite2D" type="Sprite2D" parent="Player2HookPoint"]
position = Vector2(-11, 1)
rotation = 1.5708
texture = ExtResource("4_7r4gi")

[node name="Marker2D" type="Marker2D" parent="Player2HookPoint"]
position = Vector2(-21, 0)

[node name="Player1HookPoint" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1HookPoint"]
shape = SubResource("CircleShape2D_ceco4")

[node name="Sprite2D" type="Sprite2D" parent="Player1HookPoint"]
position = Vector2(-11, 1)
rotation = 1.5708
texture = ExtResource("4_7r4gi")

[node name="Marker2D" type="Marker2D" parent="Player1HookPoint"]
position = Vector2(-21, 0)

[node name="platforms" type="CanvasGroup" parent="."]
position = Vector2(261, 43)

[node name="platform" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(-242, 356)

[node name="platform" type="Sprite2D" parent="platforms/platform"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform2" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(-421, 141)

[node name="platform" type="Sprite2D" parent="platforms/platform2"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform2"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform3" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(191, 50)

[node name="platform" type="Sprite2D" parent="platforms/platform3"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform3"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform4" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(382, 100)

[node name="platform" type="Sprite2D" parent="platforms/platform4"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform4"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform5" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(-220, 241)

[node name="platform" type="Sprite2D" parent="platforms/platform5"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform5"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform6" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(-388, 378)

[node name="platform" type="Sprite2D" parent="platforms/platform6"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform6"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform7" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(270, 340)

[node name="platform" type="Sprite2D" parent="platforms/platform7"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform7"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform8" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(334, 208)

[node name="platform" type="Sprite2D" parent="platforms/platform8"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform8"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform9" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(-154, 69)

[node name="platform" type="Sprite2D" parent="platforms/platform9"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform9"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="platform10" type="StaticBody2D" parent="platforms" groups=["Hookable"]]
position = Vector2(542, 297)

[node name="platform" type="Sprite2D" parent="platforms/platform10"]
position = Vector2(267, 122)
texture = ExtResource("7_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platforms/platform10"]
position = Vector2(-166, 65)
scale = Vector2(0.719109, 0.536184)
polygon = PackedVector2Array(547.9, 93.2515, 517.307, 76.4663, 514.526, 52.2209, 538.166, 42.8957, 671.664, 42.8957, 677.227, 50.3558, 678.617, 55.9509, 667.493, 80.1963, 639.68, 83.9264)

[node name="canopy" type="StaticBody2D" parent="." groups=["Hookable"]]
position = Vector2(-2, 2)

[node name="Sprite2D" type="Sprite2D" parent="canopy"]
position = Vector2(579, 324)
texture = ExtResource("11_e3hyu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="canopy"]
polygon = PackedVector2Array(84, 166, 92, 130, 115, 121, 149, 121, 166, 113, 174, 99, 177, 75, 191, 74, 202, 64, 213, 65, 227, 54, 238, 66, 248, 72, 261, 71, 272, 67, 286, 73, 296, 70, 302, 64, 333, 77, 363, 68, 406, 66, 432, 58, 478, 56, 513, 47, 500, 35, 520, 35, 548, 40, 573, 48, 597, 55, 611, 71, 635, 60, 667, 59, 688, 43, 709, 53, 744, 41, 788, 41, 820, 44, 818, 57, 850, 43, 891, 48, 915, 41, 1023, 51, 1047, 96, 1074, 125, 1116, 136, 1153, 146, 1150, 1, 9, 2, 5, 154, 5, 175, 42, 182, 69, 184)

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="Ui" parent="UiLayer" instance=ExtResource("12_q5onr")]

[node name="PausedLayer" type="CanvasLayer" parent="."]

[node name="Paused" parent="PausedLayer" instance=ExtResource("9_7r4gi")]
visible = false

[node name="StartLayer" type="CanvasLayer" parent="."]

[node name="Start" parent="StartLayer" instance=ExtResource("8_4mrxx")]
visible = false

[node name="EndGameLayer" type="CanvasLayer" parent="."]

[node name="EndScene" parent="EndGameLayer" instance=ExtResource("11_q5onr")]
visible = false

[node name="GameBoundary" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameBoundary"]
position = Vector2(582, 403)
shape = SubResource("RectangleShape2D_e3hyu")

[node name="GameState" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
process_mode = 3
script = ExtResource("13_o8fc1")
initial_state = NodePath("StartScreen")

[node name="StartScreen" type="Node" parent="GameState"]
script = ExtResource("14_o8fc1")

[node name="Paused" type="Node" parent="GameState"]
process_mode = 3
script = ExtResource("15_xo05s")

[node name="Playing" type="Node" parent="GameState"]
script = ExtResource("16_dss4m")

[node name="EndGame" type="Node" parent="GameState"]
process_mode = 3
script = ExtResource("17_7t5mc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_lakw3")
autoplay = true
script = ExtResource("19_pm21f")

[connection signal="player_collision" from="Player1" to="GameState/Playing" method="_on_player_collision"]
[connection signal="player_collision" from="Player2" to="GameState/Playing" method="_on_player_collision"]
[connection signal="resume_triggered" from="PausedLayer/Paused" to="GameState/Paused" method="_resume"]
[connection signal="start_game_triggered" from="StartLayer/Start" to="GameState/StartScreen" method="_start_game"]
[connection signal="body_exited" from="GameBoundary" to="GameState/Playing" method="_on_game_boundary_body_exited"]
